--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,51 +1,35 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="ExtraText">
 
-
-<!-- Permisos -->
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false" />
-
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32"/>
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
-    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28" tools:ignore="ScopedStorage" />
-
-
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name="com.kronos.MyApplication"
+
         android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kronos"
+        tools:targetApi="31"
         android:usesCleartextTraffic="true"
-        android:largeHeap="true"
-        tools:targetApi="31">
-
-        <!-- Entrada principal -->
+        >
         <activity
             android:name="com.kronos.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Kronos">
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.Kronos"
+            tools:ignore="DiscouragedApi">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="io.scanbot.sdk.ui_v2.document.DocumentScannerActivity"
-            android:theme="@style/Theme.Scanbot"
-            android:exported="false"
-            tools:replace="android:theme" />
-
-
-
-
     </application>
+
 </manifest>
