--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,35 +1,57 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="ExtraText">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+<!-- Permisos -->
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
+
+
+
+
 
     <application
-
+        android:name="com.kronos.MyApplication"
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kronos"
-        tools:targetApi="31"
         android:usesCleartextTraffic="true"
-        >
+        android:largeHeap="true"
+        tools:targetApi="31">
+
+        <!-- Entrada principal -->
         <activity
             android:name="com.kronos.MainActivity"
             android:exported="true"
-            android:screenOrientation="landscape"
-            android:theme="@style/Theme.Kronos"
-            tools:ignore="DiscouragedApi">
+            android:theme="@style/Theme.Kronos">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity
+            android:name="io.scanbot.sdk.ui_v2.document.DocumentScannerActivity"
+            android:theme="@style/Theme.Scanbot"
+            android:exported="false"
+            tools:replace="android:theme" />
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
+
+
+    </application>
 </manifest>
